Outputs-template-POC/Security-groups-tempate.yaml
Description: |
  Cloudformation template that creates two security groups for allowing SSH and HTTP inbound traffic which can be imported by other tempates and attached to provisioned EC2 Instances using the !ImportValue attribute

Resources:
  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group to allow SSH into EC2 instances
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: SSHSecurityGroup
        - Key: Description
          Value: Security group to allow SSH into EC2 instances using port 22

  PublicHTTPSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group to allow public access on port 80
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: PublicHTTPSecurityGroup
        - Key: Description
          Value: Security group to allow public access on HTTP port 80
Outputs:
  PublicHTTPSecurityGroup:
    Description: exports Publically accessible HTTP Security group that EC2 Instances running web applications can use
    Value: !Ref PublicHTTPSecurityGroup
    Export:
      Name: PublicHTTPSecurityGroup
  SSHSecurityGroup:
    Description: exports Security group that will allow SSH into linux based EC2 instances using the private key
    Value: !Ref SSHSecurityGroup
    Export:
      Name: SSHSecurityGroup
